[gd_scene load_steps=28 format=3 uid="uid://b7edkoqb1ehrc"]

[ext_resource type="Script" uid="uid://cc5p7yau332i5" path="res://scripts/player_characters/generic_player.gd" id="1_f0cto"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8v8j"]
size = Vector2(30, 8)

[sub_resource type="Animation" id="Animation_l2bnk"]
resource_name = "Idle_Down"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_ewquj"]
resource_name = "Idle_Left"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_loerh"]
resource_name = "Idle_Right"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q7jgg"]
resource_name = "Idle_Up"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_p8v8j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j74ww"]
resource_name = "Walk_Down"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_tnvxq"]
resource_name = "Walk_Left"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_f0cto"]
resource_name = "Walk_Right"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eedlb"]
resource_name = "Walk_Up"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8v8j"]
_data = {
&"Idle_Down": SubResource("Animation_l2bnk"),
&"Idle_Left": SubResource("Animation_ewquj"),
&"Idle_Right": SubResource("Animation_loerh"),
&"Idle_Up": SubResource("Animation_q7jgg"),
&"RESET": SubResource("Animation_p8v8j"),
&"Walk_Down": SubResource("Animation_j74ww"),
&"Walk_Left": SubResource("Animation_tnvxq"),
&"Walk_Right": SubResource("Animation_f0cto"),
&"Walk_Up": SubResource("Animation_eedlb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f0cto"]
animation = &"Idle_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p8v8j"]
animation = &"Idle_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j74ww"]
animation = &"Idle_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eedlb"]
animation = &"Idle_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_tnvxq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f0cto")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_p8v8j")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j74ww")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_eedlb")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tnvxq"]
animation = &"Walk_Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ewquj"]
animation = &"Walk_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_loerh"]
animation = &"Walk_Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q7jgg"]
animation = &"Walk_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ewquj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tnvxq")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ewquj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_loerh")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_q7jgg")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f0cto"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p8v8j"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j74ww"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_loerh"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_tnvxq")
states/Idle/position = Vector2(373, 35)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_ewquj")
states/Walk/position = Vector2(500, 154)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_f0cto"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_p8v8j"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_j74ww")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0cto"]
size = Vector2(1920, 1677)

[node name="GenericPlayer" type="CharacterBody2D"]
position = Vector2(960, 540)
script = ExtResource("1_f0cto")

[node name="Sprite2D" type="Sprite2D" parent="."]
flip_h = true
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 24)
shape = SubResource("RectangleShape2D_p8v8j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p8v8j")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_loerh")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idle = false
parameters/conditions/is_moving = false
parameters/Idle/blend_position = Vector2(-0.9968102, 0.03296709)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="TargetZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetZone"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_f0cto")

[connection signal="body_entered" from="TargetZone" to="." method="_on_target_zone_body_entered"]
[connection signal="body_exited" from="TargetZone" to="." method="_on_target_zone_body_exited"]
